# knitwear_shop

./: pyproject.toml
knitwear/: db.sqlite3  manage.py
knitwear/knitwear/: asgi.py  settings.py  urls.py  wsgi.py
knitwear/orders/: admin.py  models.py  views.py
knitwear/orders/migrations/: 0001_initial.py
knitwear/products/: admin.py  models.py  urls.py  utils.py  views.py
knitwear/products/fixtures/: badge.json  categories.json  goods.json
knitwear/products/migrations/: 0001_initial.py  0002_productbadge_product_sale_product_badge.py  0003_alter_product_badge_alter_product_price_and_more.py
knitwear/products/templates/products/: base.html  catalog.html  contact.html  contacts.html  index.html  product.html  products.html
knitwear/products/templatetags/: products_tags.py
knitwear/static/: index.css
knitwear/static/css/: base.css  index.css  product_cart.css
knitwear/templates/: base.html  catalog.html  index.html
knitwear/users/: admin.py  forms.py  models.py  urls.py  views.py
knitwear/users/migrations/: 0001_initial.py  0002_alter_user_birthday_alter_user_sex.py  0003_remove_user_sex_alter_user_birthday.py  0004_alter_user_birthday.py  0005_user_sex.py  0006_alter_user_sex.py  0007_alter_user_sex.py  0008_alter_user_birthday_alter_user_sex.py
knitwear/users/templates/users/: base.html  login.html  profile.html  registration.html
web/: index.html  main.css
